Style: Fix footer alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,3 +22,7 @@ section {
 nav {
   margin-left: -800px;
 }
+
+footer {
+  margin-left: -750px;
+}
